--- a/wcml_webapp/views/wcmljsapp.html
+++ b/wcml_webapp/views/wcmljsapp.html
@@ -29,7 +29,7 @@
                 </div>
                 <h1>{{=response.title}}
                 <small id="subtitle">{{=response.subtitle or ''}}</small>
-                <small id="version">early adopters release</small>
+                <small id="version">v1.0</small>
                 </h1>
             </div>
 	{{pass}}
