add wcml app on desktop, fix [help] link

--- a/wcml_webapp/views/default/index.html
+++ b/wcml_webapp/views/default/index.html
@@ -19,4 +19,4 @@
 [{{=A(("start survey"), _href=URL('default','do_survey'))}}] |
 [{{=A(("set floorplan"), _href=URL('default','set_floorplan'))}}] |
 [<a href="#" onClick="confirmReset()">reset app</a>] |
-[{{=A(("help"), _href=URL('https://github.com/ntekpelek/wcml/wiki/Usage'), _target='_blank' )}}]
+[{{=A(("help"), _href='https://github.com/ntekpelek/wcml/wiki/Usage', _target='_blank' )}}]
